--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^1.12.0
   firebase_auth: 3.3.8
   animated_button: ^0.2.0
+  connectivity_plus: ^2.3.0
 
 dev_dependencies:
   flutter_test:
