--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   firebase_core: ^1.12.0
   firebase_auth: 3.3.8
   animated_button: ^0.2.0
-  connectivity_plus: ^2.3.0
+  rflutter_alert: ^2.0.4
+  dependencies:
+  flutter_overlay_loader: ^1.0.8
 
 dev_dependencies:
   flutter_test:
