--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,8 @@ dependencies:
   firebase_auth: 3.3.8
   animated_button: ^0.2.0
   rflutter_alert: ^2.0.4
-  dependencies:
-  flutter_overlay_loader: ^1.0.8
+  lottie: ^1.3.0
+  
 
 dev_dependencies:
   flutter_test:
