--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,15 @@ dependencies:
   rflutter_alert: ^2.0.4
   lottie: ^1.3.0
   
+  
 
+flutter_icons:
+  # android: "launcher_icon"
+  android: true
+  ios: false
+  image_path: "assets/icon/icon1024.png"
 dev_dependencies:
+  flutter_launcher_icons: ^0.9.2
   flutter_test:
     sdk: flutter
 
