--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   firebase_auth: 3.3.8
   animated_button: ^0.2.0
   rflutter_alert: ^2.0.4
-  lottie: ^1.3.0
+  dependencies:
+  animated_text_kit: ^4.2.1
   
   
 
@@ -72,7 +73,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
