--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.12.0
   firebase_auth: 3.3.8
-  animated_button: ^0.2.0
-  rflutter_alert: ^2.0.4
-  dependencies:
   animated_text_kit: ^4.2.1
-  provider: ^6.0.2
+  # provider: ^6.0.2
+  get: ^4.6.5
+  google_fonts: ^3.0.1
   
   
 
@@ -74,8 +73,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
-  #   - images/a_dot_ham.jpeg
+    - assets/images/025.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
